# gve_devnet_fmc_dynamic_object_from_url

./: .env-sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample-config.yaml  update_object_from_url.py
